--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/BMW Tamplate.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
+<link rel="icon" href="resimler/logolar/bmwLogo.png" type="image/x-icon">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
+<title>BMW</title>
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 <link href="SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css" />
 <script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
@@ -54,7 +55,7 @@
             <li><a href="#">Item 3.3</a></li>
           </ul>
         </li>
-        <li><a href="#">BMW'yi Tan&#305;</a></li>
+        <li><a href="#">BMW'yi Tanı</a></li>
         <li><a href="#">İletişim</a></li>
       </ul>
     </div>
@@ -62,7 +63,7 @@
 	
 	<table width = "100%" >
     	<tr>
-        	<td rowspan = "4" ><img src = ""> Araç Resmi </td>
+        	<td rowspan = "4" width = "350" ><img src = "resimler/modeller/5_sedan/5Series1.jpg" width = "350"></td>
         </tr>
         <tr>
         	
