--- a/modeller/modeller.html
+++ b/modeller/modeller.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/BMW Tamplate.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
+<link rel="icon" href="../resimler/logolar/bmwLogo.png" type="image/x-icon">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
+<title>BMW Modelleri'ni Keşfedin</title>
 <link href="../css/style.css" rel="stylesheet" type="text/css" />
 <link href="../SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css" />
 <script src="../SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
@@ -54,243 +55,38 @@
             <li><a href="#">Item 3.3</a></li>
           </ul>
         </li>
-        <li><a href="#">BMW'yi Tan&#305;</a></li>
+        <li><a href="#">BMW'yi Tanı</a></li>
         <li><a href="#">İletişim</a></li>
       </ul>
     </div>
     <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->
 	
-	<table>
+	<table border = "2" align = "center" >
 		
 		<tr>
 			
-			<td rowspan = "3" ><img src = "">Modelle İlgili Araç Resmi</td>
-			
-		</tr>
-		<tr>
-			
-			<td align = "left" ><b>1 Series<b></td>
-			
-			
-		</tr>
-		<tr>
-			
-			<td align = "justify" > Modelin Diğer Modeelerle ARasındaki Farkı </td>
+			<td align = "center" width = "20" ><a href = "modeller.html#X" class = "link" >X</a></td>
+			<td align = "center" width = "20" ><a href = "" class = "link" >8</a></td>
+			<td align = "center" width = "20" ><a href = "" class = "link" >7</a></td>
 			
 		</tr>
 	</table>
 	
-	
 	<table>
 		
+		<a name = "X">
 		<tr>
 			
-			<td rowspan = "3" ><img src = "">Modelle İlgili Araç Resmi</td>
+			<td>  </td>
 			
 		</tr>
 		<tr>
 			
-			<td align = "left" ><b>2 Series<b></td>
-			
-			
-		</tr>
-		<tr>
-			
-			<td align = "justify" > Modelin Diğer Modeelerle ARasındaki Farkı </td>
+			<td></td>
 			
 		</tr>
+		
 	</table>
-	
-	
-	<table>
-		
-		<tr>
-			
-			<td rowspan = "3" ><img src = "">Modelle İlgili Araç Resmi</td>
-			
-		</tr>
-		<tr>
-			
-			<td align = "left" ><b>3 Series<b></td>
-			
-			
-		</tr>
-		<tr>
-			
-			<td align = "justify" > Modelin Diğer Modeelerle ARasındaki Farkı </td>
-			
-		</tr>
-	</table>
-	
-	
-	<table>
-		
-		<tr>
-			
-			<td rowspan = "3" ><img src = "">Modelle İlgili Araç Resmi</td>
-			
-		</tr>
-		<tr>
-			
-			<td align = "left" ><b>4 Series<b></td>
-			
-			
-		</tr>
-		<tr>
-			
-			<td align = "justify" > Modelin Diğer Modeelerle ARasındaki Farkı </td>
-			
-		</tr>
-	</table>	
-	
-	
-	<table>
-		
-		<tr>
-			
-			<td rowspan = "3" ><img src = "">Modelle İlgili Araç Resmi</td>
-			
-		</tr>
-		<tr>
-			
-			<td align = "left" ><b>5 Series<b></td>
-			
-			
-		</tr>
-		<tr>
-			
-			<td align = "justify" > Modelin Diğer Modeelerle ARasındaki Farkı </td>
-			
-		</tr>
-	</table>	
-	
-	
-	<table>
-		
-		<tr>
-			
-			<td rowspan = "3" ><img src = "">Modelle İlgili Araç Resmi</td>
-			
-		</tr>
-		<tr>
-			
-			<td align = "left" ><b>6 Series<b></td>
-			
-			
-		</tr>
-		<tr>
-			
-			<td align = "justify" > Modelin Diğer Modeelerle ARasındaki Farkı </td>
-			
-		</tr>
-	</table>
-	
-	
-	<table>
-		
-		<tr>
-			
-			<td rowspan = "3" ><img src = "">Modelle İlgili Araç Resmi</td>
-			
-		</tr>
-		<tr>
-			
-			<td align = "left" ><b>7 Series<b></td>
-			
-			
-		</tr>
-		<tr>
-			
-			<td align = "justify" > Modelin Diğer Modeelerle ARasındaki Farkı </td>
-			
-		</tr>
-	</table>	
-	
-	
-	<table>
-		
-		<tr>
-			
-			<td rowspan = "3" ><img src = "">Modelle İlgili Araç Resmi</td>
-			
-		</tr>
-		<tr>
-			
-			<td align = "left" ><b>8 Series<b></td>
-			
-			
-		</tr>
-		<tr>
-			
-			<td align = "justify" > Modelin Diğer Modeelerle ARasındaki Farkı </td>
-			
-		</tr>
-	</table>
-	
-	
-	<table>
-		
-		<tr>
-			
-			<td rowspan = "3" ><img src = "">Modelle İlgili Araç Resmi</td>
-			
-		</tr>
-		<tr>
-			
-			<td align = "left" ><b>M Series<b></td>
-			
-			
-		</tr>
-		<tr>
-			
-			<td align = "justify" > Modelin Diğer Modeelerle ARasındaki Farkı </td>
-			
-		</tr>
-	</table>
-	
-	
-	<table>
-		
-		<tr>
-			
-			<td rowspan = "3" ><img src = "">Modelle İlgili Araç Resmi</td>
-			
-		</tr>
-		<tr>
-			
-			<td align = "left" ><b>Z Series<b></td>
-			
-			
-		</tr>
-		<tr>
-			
-			<td align = "justify" > Modelin Diğer Modeelerle ARasındaki Farkı </td>
-			
-		</tr>
-	</table>
-	
-	
-	<table>
-		
-		<tr>
-			
-			<td rowspan = "3" ><img src = "">Modelle İlgili Araç Resmi</td>
-			
-		</tr>
-		<tr>
-			
-			<td align = "left" ><b>X Series<b></td>
-			
-			
-		</tr>
-		<tr>
-			
-			<td align = "justify" > Modelin Diğer Modeelerle ARasındaki Farkı </td>
-			
-		</tr>
-	</table>	
-
-	
 	
 	<!-- InstanceEndEditable --></div>
     <div id="fooder">
