--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
 <link rel="icon" href="resimler/logolar/bmwLogo.png" type="image/x-icon">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>
 <!-- InstanceBeginEditable name="baslik" -->
-BMW
+<title>BMW</title>
 <!-- InstanceEndEditable -->
-</title>
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 <link href="SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css" />
 <script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
