--- a/elektirikli_modeller/elektrikliModeller.html
+++ b/elektirikli_modeller/elektrikliModeller.html
@@ -3,13 +3,16 @@
 <head>
 <link rel="icon" href="../resimler/logolar/bmwLogo.png" type="image/x-icon">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>BMW Modelleri'ni Keşfedin</title>
+<!-- InstanceBeginEditable name="baslik" -->
+<title>
+</title>
+<!-- InstanceEndEditable -->
 <link href="../css/style.css" rel="stylesheet" type="text/css" />
 <link href="../SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css" />
 <script src="../SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
 </head>
-
 <body>
+
 <div id="anaDiv">
   <div id="Header">
   
@@ -20,7 +23,7 @@
   <div id="icerik1Dİv">
     <div id="menuDiv">
       <ul id="MenuBar1" class="MenuBarVertical">
-        <li><a class="MenuBarItemSubmenu" href="modeller.html">Modeller</a>
+        <li><a class="MenuBarItemSubmenu" href="../modeller/modeller.html">Modeller</a>
           <ul>
             <li><a href="#">1 Series</a></li>
             <li><a href="#">2 Series</a></li>
@@ -35,7 +38,7 @@
             <li><a href="#">X Series</a></li>
           </ul>
         </li>
-        <li><a href="#">Elektrikli Modeller</a>
+        <li><a href="elektrikliModeller.html">Elektrikli Modeller</a>
           <ul>
             <li><a href="#">İ Series</a></li>
             <li><a href="#">İX Series</a></li>
@@ -60,7 +63,8 @@
       </ul>
     </div>
     <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->
-<table border = "0" align = "left"  Cellspacing = "15" >
+	
+	<table border = "0" align = "left"  Cellspacing = "15" >
 		
 		<tr>
 			
@@ -216,6 +220,7 @@
 	</table>	
 	</a>
 	<hr size = "3" color = "#808080" >
+	
 	
 	<!-- InstanceEndEditable --></div>
     <div id="fooder">
