BMW model X1 Series Başlangıç

--- a/modeller/modeller.html
+++ b/modeller/modeller.html
@@ -229,7 +229,7 @@
 	</table>
 	</a>
 	
-	<hr size = "3" color = "#808080" width = "80%" >
+	<hr size = "3" color = "#808080" >
 	
 	<!-- M serisi Başlangıcı -->
 	
@@ -300,7 +300,7 @@
 						</tr>
 						<tr>
 					
-							<td class = "araçAdı" >BMW GRAN COUPE</td>
+							<td class = "araçAdı" >BMW M4 GRAN COUPE</td>
 				
 						</tr>
 						<tr>
@@ -367,7 +367,7 @@
 	</table>
 	</a>
 	
-	<hr size = "3" color = "#808080" width = "80%" >
+	<hr size = "3" color = "#808080">
 	
 	<!-- 8 series serisi Başlangıcı -->
 	
@@ -432,7 +432,7 @@
 	</table>
 	</a>
 	
-	<hr size = "3" color = "#808080" width = "80%" >
+	<hr size = "3" color = "#808080">
 	
 	<!-- 7 Series Başlangıcı -->
 	
@@ -474,7 +474,7 @@
 	</table>
 	</a>
 	
-	<hr size = "3" color = "#808080" width = "80%" >
+	<hr size = "3" color = "#808080">
 	
 	<!-- 6 Series Başlangıcı -->
 	
