araba.css açıldı ve düzenlendi

--- a/deneme/deneme1.html
+++ b/deneme/deneme1.html
@@ -25,17 +25,17 @@
       <ul id="MenuBar1" class="MenuBarVertical">
         <li><a class="MenuBarItemSubmenu" href="../modeller/modeller.html">Modeller</a>
           <ul>
-            <li><a href="#">1 Series</a></li>
-            <li><a href="#">2 Series</a></li>
-            <li><a href="#">3 Series</a></li>
-            <li><a href="#">4 Series</a></li>
-            <li><a href="#">5 Series</a></li>
-            <li><a href="#">6 Series</a></li>
-            <li><a href="#">7 Series</a></li>
-            <li><a href="#">8 Series</a></li>
-            <li><a href="#">M Series</a></li>
+            <li><a href="../modeller/modeller.html#1">1 Series</a></li>
+            <li><a href="../modeller/modeller.html#2">2 Series</a></li>
+            <li><a href="../modeller/modeller.html#3">3 Series</a></li>
+            <li><a href="../modeller/modeller.html#4">4 Series</a></li>
+            <li><a href="../modeller/modeller.html#5">5 Series</a></li>
+            <li><a href="../modeller/modeller.html#6">6 Series</a></li>
+            <li><a href="../modeller/modeller.html#7">7 Series</a></li>
+            <li><a href="../modeller/modeller.html#8">8 Series</a></li>
+            <li><a href="../modeller/modeller.html#M">M Series</a></li>
             <li><a href="#">Z Series</a></li>
-            <li><a href="#">X Series</a></li>
+            <li><a href="../modeller/modeller.html#X">X Series</a></li>
           </ul>
         </li>
         <li><a href="../elektirikli_modeller/elektrikliModeller.html">Elektrikli Modeller</a>
