--- a/modeller/XSeries/X1Series.html
+++ b/modeller/XSeries/X1Series.html
@@ -6,6 +6,7 @@
 <!-- InstanceBeginEditable name="baslik" -->
 <title>
 </title>
+<link href="../../css/araba.css" rel="stylesheet" type = "text/css" />
 <!-- InstanceEndEditable -->
 <link href="../../css/style.css" rel="stylesheet" type="text/css" />
 <link href="../../SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css" />
@@ -25,17 +26,17 @@
       <ul id="MenuBar1" class="MenuBarVertical">
         <li><a class="MenuBarItemSubmenu" href="../modeller.html">Modeller</a>
           <ul>
-            <li><a href="#">1 Series</a></li>
-            <li><a href="#">2 Series</a></li>
-            <li><a href="#">3 Series</a></li>
-            <li><a href="#">4 Series</a></li>
-            <li><a href="#">5 Series</a></li>
-            <li><a href="#">6 Series</a></li>
-            <li><a href="#">7 Series</a></li>
-            <li><a href="#">8 Series</a></li>
-            <li><a href="#">M Series</a></li>
+            <li><a href="../modeller.html#1">1 Series</a></li>
+            <li><a href="../modeller.html#2">2 Series</a></li>
+            <li><a href="../modeller.html#3">3 Series</a></li>
+            <li><a href="../modeller.html#4">4 Series</a></li>
+            <li><a href="../modeller.html#5">5 Series</a></li>
+            <li><a href="../modeller.html#6">6 Series</a></li>
+            <li><a href="../modeller.html#7">7 Series</a></li>
+            <li><a href="../modeller.html#8">8 Series</a></li>
+            <li><a href="../modeller.html#M">M Series</a></li>
             <li><a href="#">Z Series</a></li>
-            <li><a href="#">X Series</a></li>
+            <li><a href="../modeller.html#X">X Series</a></li>
           </ul>
         </li>
         <li><a href="../../elektirikli_modeller/elektrikliModeller.html">Elektrikli Modeller</a>
@@ -73,27 +74,111 @@
     </div>
     <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->
 	
-	<table width = "100%" >
+	<table width = "98%" align = "center" >
 		<tr>
 			
-			<td colspan = "2" ><img src = "" width = "100%" >Resim</td>
+			<td colspan = "5" ><img src = "../../resimler/modeller/X/X1/Xilk.jpg" width = "100%" ></td>
 			
 		</tr>
 		<tr>
 			
-			<td>Motor</td>
-			<td>Beygir</td>
+			<td width = "160" ><a class = "resimBaslik">Motor Tipi</a></td>
+			<td width = "110" ><a class = "resimBaslik">Güç</a></td>
+			<td width = "110" ><a class = "resimBaslik">0-100KM</a></td>
+			<td width = "150" ><a class = "resimBaslik">Bağaj Hacmi</a></td>
+			<td></td>
 			
 		</tr>
 		<tr>
 			
-			<td>1512</td>
-			<td>01546</td>
+			<td><a class = "resimAciklama">Benzin</a></td>
+			<td><a class = "resimAciklama">170 bg</a></td>
+			<td><a class = "resimAciklama">h:8,3 sn</a></td>
+			<td><a class = "resimAciklama">500 lİtre</a></td>
 			
 		</tr>
 	</table>
 	
+	<pre>
+		<p class = "icerik" >
+		
+	Yeni BMW X1, çok yönlülüğü ve işlevselliği ile herkesi etkilemeyi başarıyor:
+ 
+
+	- Sportif ve kendinden emin bir duruş için özenle işlenmiş dış tasarım
+	- Yüksek kaliteli malzemeler ve BMW Kavisli Ekran gibi yeniliklerle donatılmış iç tasarım
+
+	Yeni BMW X1 sDrive20i:
+	Yakıt tüketimi (litre/100 km) (WLTP ortalama): 5,9 - 6,6 
+	CO2 emisyonu (g/km) (WLTP ortalama): 133 - 149
+		
+		</p>
+		
+	</pre>
 	
+	<br><br>
+	
+	<table width = "75%" cellpadding = "10" align = "center" >
+		
+		<tr>
+			
+			<td width = "30%" ><img src = "../../resimler/modeller/X/X1/X1kokpıt.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/modeller/X/X1/konsol.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/modeller/X/X1/konfor.jpg" width = "100%" ></td>
+			
+		</tr>
+		<tr>
+			
+			<td align = "center" ><a class = "aciklamaBaslik"> Kokpitte sezgisel kontroller.</a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> Modern merkez konsol. </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> Arka bölümde konfor. </a></td>
+			
+		</tr>
+		<tr>
+			
+			<td align = "justify" valign = "top" ><a class = "aciklama">Dokunmatik ve sesli kontrol özelliğine sahip BMW Kavisli Ekran, ince ve çerçevesiz yapısıyla gerçek anlamda göz alıcı bir detay olmasının yanı sıra BMW iDrive'ın temel arayüzünü oluşturuyor.</a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">Düğmeli/kaydırmalı kontrol özelliğine sahip modern merkez konsol, yeni nesil kumanda öğeleri ve entegre kablosuz şarj yuvası ile karşımıza çıkıyor.</a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">Ayrıcalıklı kontrast dikişlerle sunulan Sensatec döşemeleri ve yeni tasarımları sayesinde arka koltuklar tüm yolculara üst düzey konfor deneyimi yaşatıyor. Birbirinden bağımsız olarak 40:20:40 oranında katlanabilen sırtlıklar oldukça esnek bir kullanım sunuyor.</a></td>
+			
+		</tr>
+		
+	</table>
+	
+	<br><br>
+	
+	
+	<!-- slider -->
+	
+	
+	<br><br>
+	
+	<table width = "75%" cellpadding = "10" align = "center" >
+		
+		<tr>
+			
+			<td width = "30%" ><img src = "../../resimler/modeller/X/X1/direksiyon.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/modeller/X/X1/fren.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/modeller/X/X1/motor.jpg" width = "100%" ></td>
+			
+		</tr>
+		<tr>
+			
+			<td align = "center" ><a class = "aciklamaBaslik">   Vites kulakçıkları ile Steptronic şanzıman.  </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik">  19 inç M Alaşım fren.  </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> TwinPower Turbo sıralı 4 silindirli benzinli motor. </a></td>
+			
+		</tr>
+		<tr>
+			
+			<td align = "justify" valign = "top" ><a class = "aciklama">Vites değiştirme kulakçıklarına sahip otomatik 7 ileri Steptronic şanzıman, sportif vites değiştirme karakterini yüksek verimlilik ve üst düzey sürüş konforuyla bir araya getiriyor.</a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">Gri fren kaliperleriyle 19 inç M Alaşım fren olağanüstü seviyede yavaşlama ve üstün bir denge sağlar.</a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">TwinPower Turbo sıralı 4 silindirli benzinli motor, dinamik güç üretimini M ailesine özgü güçlü motor sesiyle birlikte sunuyor.</a></td>
+			
+		</tr>
+		
+	</table>
+	
+	<br><br><br>
 	
 	<!-- InstanceEndEditable --></div>
     <div id="fooder">
