elektrikli araçlara yeni sayfalar eklendi

--- a/motorlar/motorlar.html
+++ b/motorlar/motorlar.html
@@ -46,7 +46,7 @@
         </li>
         <li><a href="motorlar.html">Motorlar</a>
         	<ul>
-            	<li><a href="#">Advanture</a></li>
+            	<li><a href="#">Adventure</a></li>
             	<li><a href="#">Heritage</a></li>
 			 	<li><a href="#">Sport</a></li>
             	<li><a href="#">M</a></li>
@@ -77,7 +77,7 @@
 		
 		<tr>
 			
-			<td align = "center" width = "20" ><a href = "motorlar.html#Advanture" class = "link" >Advanture</a></td>
+			<td align = "center" width = "20" ><a href = "motorlar.html#Adventure" class = "link" >Adventure</a></td>
 			<td align = "center" width = "20" ><a href = "motorlar.html#Heritage" class = "link" >Heritage</a></td>
 			<td align = "center" width = "20" ><a href = "motorlar.html#Sport" class = "link" >Sport</a></td>
 			<td align = "center" width = "20" ><a href = "motorlar.html#M" class = "link" >M</a></td>
@@ -90,12 +90,12 @@
 	<br><br><br>
 	
 	
-	<a name = "Advanture">
+	<a name = "Adventure">
 	<table cellspacing = "10" border = "0" >
 		
 		<tr>
 			
-			<td colspan = 3 ><a class = "motorAnaBaslik">Advanture </a></td>
+			<td colspan = 3 ><a class = "motorAnaBaslik">Adventure </a></td>
 		
 		</tr>
 		<tr>
