elektirikli araçlara resim ve sayfa ekleme

--- a/elektirikli_modeller/İXSeries/İX3.html
+++ b/elektirikli_modeller/İXSeries/İX3.html
@@ -104,7 +104,7 @@
 		
 	Yeni tasarımıyla standart özellik olarak sunulan  Sport donanımı sayesinde BMW iX3 her zamankinden daha sportif görünüyor. Aerodinamik öğeler ve mavi 
 	vurgular otomobilin elektrikli doğasını tüm etkisiyle gözler önüne seriyor. Yolculuklarınız ister kısa ister uzun olsun, BMW iX3, 460 kilometreye varan 
-	menzili ve 18,5 kWsa/100 km* elektrik tüketimiyle her rotaya uygun.
+	menzili ve 18,5 kWsa/100 km elektrik tüketimiyle her rotaya uygun.
 
  
 
@@ -123,9 +123,9 @@ BMW iX3:
 		
 		<tr>
 			
-			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX1/jant.jpg" width = "100%" ></td>
-			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX1/port bagaj.jpg" width = "100%" ></td>
-			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX1/paspas.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX3/kokpiy.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX3/İX3camtavan.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX3/İX3koltuk.jpg" width = "100%" ></td>
 			
 		</tr>
 		<tr>
@@ -151,9 +151,9 @@ BMW iX3:
 		
 		<tr>
 			
-			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX1/evdesarj.jpg" width = "100%" ></td>
-			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX1/yoldasarj.jpg" width = "100%" ></td>
-			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX1/tasarruf.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX3/İX3jant.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX3/İX3kapıaltı.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX3/bisiklet.jpg" width = "100%" ></td>
 			
 		</tr>
 		<tr>
@@ -185,9 +185,9 @@ BMW iX3:
 		
 		<tr>
 			
-			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX1/onkoltuk.jpg" width = "100%" ></td>
-			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX1/camtavan.jpg" width = "100%" ></td>
-			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX1/sürdürülebilirlik.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX3/asistan.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX3/parkasistan.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX3/navigasyon.jpg" width = "100%" ></td>
 			
 		</tr>
 		<tr>
