--- a/elektirikli_modeller/İXSeries/İXM60.html
+++ b/elektirikli_modeller/İXSeries/İXM60.html
@@ -6,6 +6,7 @@
 <!-- InstanceBeginEditable name="baslik" -->
 <title>
 </title>
+<link href="../../css/araba.css" rel="stylesheet" type = "text/css" />
 <!-- InstanceEndEditable -->
 <link href="../../css/style.css" rel="stylesheet" type="text/css" />
 <link href="../../SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css" />
@@ -71,7 +72,118 @@
         <li><a href="#">İletişim</a></li>
       </ul>
     </div>
-    <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->icerik<!-- InstanceEndEditable --></div>
+    <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->
+	
+	<table width = "98%" align = "center" >
+		<tr>
+			
+			<td colspan = "5" ><img src = "../../resimler/elektirikli_modeller/İX_M60/İXM60manzara.jpg" width = "100%" ></td>
+			
+		</tr>
+		<tr>
+			
+			<td width = "160" ><a class = "resimBaslik">Yakıt Tipi</a></td>
+			<td width = "110" ><a class = "resimBaslik">Güç</a></td>
+			<td width = "110" ><a class = "resimBaslik">Menzil</a></td>
+			<td width = "110" ><a class = "resimBaslik">0-100KM</a></td>
+			<td></td>
+			
+		</tr>
+		<tr>
+			
+			<td><a class = "resimAciklama">Tamamen Elektrikli</a></td>
+			<td><a class = "resimAciklama">619 bg</a></td>
+			<td><a class = "resimAciklama">566 Km</a></td>
+			<td><a class = "resimAciklama">h:3.8 sn</a></td>
+			
+		</tr>
+	</table>
+	
+	<pre>
+		<p class = "icerik" >
+		
+	 BMW iX M60: ÜST DÜZEY ELEKTRİKLİ SÜRÜŞ DİNAMİKLERİ.
+  BMW iX M60, BMW i ve BMW M'in yenilikçi gücünü bir araya getiriyor. Spor Aktivite Aracı (SAV) performans segmentindeki tamamen
+  elektrikli ilk BMW M aracını keşfedin.
+ 
+
+ -İki BMW M eDrive motor, elektrikli dört çeker BMW xDrive, 455 kW/619 bg ve 1.100 Nm torkla tamamen elektrikli sürüş.
+ -Sıfır yerel CO2 emisyonu ve yaklaşık 566 kilometre (WLTP) menziliyle adrenalin yüklü eşsiz sürüş keyfi.
+ -Sade tasarım dili, cömert oranlara sahip iç tasarım ve son derece modern bir ortam.
+ -En son teknoloji ve olağanüstü derecede kapsamlı standart donanım yelpazesi.
+		
+		</p>
+		
+	</pre>
+	
+	<br><br>
+	
+	<table width = "75%" cellpadding = "10" align = "center" >
+		
+		<tr>
+			
+			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX_M60/aksam.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX_M60/havalısuspansıyon.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX_M60/aktifdireksiyon.jpg" width = "100%" ></td>
+			
+		</tr>
+		<tr>
+			
+			<td align = "center" ><a class = "aciklamaBaslik">  BMW iX M60 hareketli aksam.  </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik">  Adaptif 2 akslı havalı süspansiyon.   </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik">   İntegral Aktif Direksiyon.   </a></td>
+			
+		</tr>
+		<tr>
+			
+			<td align = "justify" valign = "top" ><a class = "aciklama">BMW iX M60'ın yüksek performanslı iki BMW M eDrive motora sahip üst düzey performanslı hareketli aksamı hızlı güç dağıtımını garanti ediyor. Dört çeker sistemin arkadan itiş ağırlıklı ayarı ve duygulara hitap eden ses deneyimi modelin sportif karakterini vurguluyor. Uzun bir menzil sunan yüksek gerilimli büyük batar</a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">Otomatik seviye kontrolü özellikli adaptif 2 akslı havalı süspansiyon ve diğer özelliklerinin yanı sıra M'e özel tasarıma sahip dengeleyiciler üstün sürüş dinamiklerinin yanında son derece konforlu bir sürüş sunuyor. Aynı zamanda aracın yüksekliğini her türlü yük altında aynı seviyede tutuyor ve sürüş moduna göre otoma</a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">İntegral Aktif Direksiyon, ön aks üzerinde direksiyon açısına bağlı olarak değişen desteği yine direksiyona etki eden arka tekerleklerle birleştiriyor. 60 km/saatin altındaki hızlarda, arka tekerlekler ters yönlerde dönerek daha fazla manevra kabiliyeti ve çeviklik sağlıyor. 60 - 80 km/sa hızdan itibaren, arka tekerlek</a></td>
+			
+		</tr>
+		
+	</table>
+	
+	<br><br>
+	
+	<table width = "75%" cellpadding = "10" align = "center" >
+		
+		<tr>
+			
+			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX_M60/İXM60jant.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX_M60/İXM60stop.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX_M60/İXM60koltuk.jpg" width = "100%" ></td>
+			
+		</tr>
+		<tr>
+			
+			<td align = "center" ><a class = "aciklamaBaslik">   22 inç, stil 1023, Bicolor Titanyum Bronz M aerodinamik jantlar.  </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik">   M vurgusu.    </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik">   Suite Amido iç tasarım.  </a></td>
+			
+		</tr>
+		<tr>
+			
+			<td align = "justify" valign = "top" ><a class = "aciklama">22 inç, stil 1023, Bicolor Titanyum Bronz, 3D parlatılmış M hafif alaşım jantlar, 9,5J x 22 jant boyutu ve 275/40 R22 lastiklerle.</a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">Bagaj kapağının sağ kısmında yer alan titanyum bronz çerçeveli M60 model yazısı, aracın sürüş dinamikleri bakımından yüksek potansiyeline işaret ediyor.</a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">Ön konsol, kapı kaplama panelleri, merkez konsol ve koltuklarda kullanılan zeytin yaprağıyla tabaklanmış özel doğal deri döşemesi sürdürülebilir lüksün modern havasını yansıtıyor.Şık kapitone dikişler döşemeye lüks ve konforlu bir görünüm kazandırıyor. Başlıklardaki Altın Bronz renkli vurgulara sahip parçalar mükemmel bir uyum sağlıyor. </a></td>
+			
+		</tr>
+		
+	</table>
+	
+	<br><br>
+	
+	
+	<!-- slider -->
+	
+	
+	
+	<br><br><br>
+
+	
+	
+	<!-- InstanceEndEditable --></div>
     <div id="fooder">
     	<table width="100%" >
         	
