resimler güncellendi, i serisi sayfaları eklendi ve tamamlandı.

--- a/elektirikli_modeller/İ/İ5.html
+++ b/elektirikli_modeller/İ/İ5.html
@@ -74,10 +74,11 @@
     </div>
     <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->
 	
+	
 	<table width = "98%" align = "center" >
 		<tr>
 			
-			<td colspan = "5" ><img src = "../../resimler/elektirikli_modeller/İX_M60/İXM60manzara.jpg" width = "100%" ></td>
+			<td colspan = "5" ><img src = "../../resimler/elektirikli_modeller/İ5/İ51.jpg" width = "100%" ></td>
 			
 		</tr>
 		<tr>
@@ -92,27 +93,26 @@
 		<tr>
 			
 			<td><a class = "resimAciklama">Tamamen Elektrikli</a></td>
-			<td><a class = "resimAciklama">619 bg</a></td>
-			<td><a class = "resimAciklama">566 Km</a></td>
-			<td><a class = "resimAciklama">h:3.8 sn</a></td>
+			<td><a class = "resimAciklama">218 bg</a></td>
+			<td><a class = "resimAciklama">523 Km</a></td>
+			<td><a class = "resimAciklama">h:7.9 sn</a></td>
 			
 		</tr>
 	</table>
 	
-	<pre>
+		<pre>
 		<p class = "icerik" >
-		
-	 BMW iX M60: ÜST DÜZEY ELEKTRİKLİ SÜRÜŞ DİNAMİKLERİ.
-  BMW iX M60, BMW i ve BMW M'in yenilikçi gücünü bir araya getiriyor. Spor Aktivite Aracı (SAV) performans segmentindeki tamamen
-  elektrikli ilk BMW M aracını keşfedin.
+      Tamamen elektrikli ilk BMW i7, elektrikli performansı ve çok yönlü eğlence deneyimini bir araya getirerek
+	 unutulmaz bir sürüş deneyimi sunuyor.
+
  
 
- -İki BMW M eDrive motor, elektrikli dört çeker BMW xDrive, 455 kW/619 bg ve 1.100 Nm torkla tamamen elektrikli sürüş.
- -Sıfır yerel CO2 emisyonu ve yaklaşık 566 kilometre (WLTP) menziliyle adrenalin yüklü eşsiz sürüş keyfi.
- -Sade tasarım dili, cömert oranlara sahip iç tasarım ve son derece modern bir ortam.
- -En son teknoloji ve olağanüstü derecede kapsamlı standart donanım yelpazesi.
+ -"Mükemmel Bir An" karşılama deneyimi
+ -Kristal farlar ve aydınlatmalı BMW "Iconic Glow" Böbrek Izgarası
+ -Özel My Modes ile iç mekanda lüks bir lounge atmosferi
+ -400 kW üzerinde güç çıkışı ve 600 km'yi aşan tamamen elektrikli menzilel şekilde çalıştırılabiliyor.
 		
-		</p>
+	    </p>
 		
 	</pre>
 	
@@ -122,30 +122,30 @@
 		
 		<tr>
 			
-			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX_M60/aksam.jpg" width = "100%" ></td>
-			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX_M60/havalısuspansıyon.jpg" width = "100%" ></td>
-			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX_M60/aktifdireksiyon.jpg" width = "100%" ></td>
+			<td width = "45%" ><img src = "../../resimler/elektirikli_modeller/İ5/5.jpg" width = "100%" ></td>
+			<td width = "45%" ><img src = "../../resimler/elektirikli_modeller/İ5/6.jpg" width = "100%" ></td>
 			
 		</tr>
 		<tr>
 			
-			<td align = "center" ><a class = "aciklamaBaslik">  BMW iX M60 hareketli aksam.  </a></td>
-			<td align = "center" ><a class = "aciklamaBaslik">  Adaptif 2 akslı havalı süspansiyon.   </a></td>
-			<td align = "center" ><a class = "aciklamaBaslik">   İntegral Aktif Direksiyon.   </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik">   İşlevsel ve hayranlık uyandırıcı şekilde cazip.    </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik">   Tüm koltuklarda en iyi ses.    </a></td>
 			
 		</tr>
 		<tr>
 			
-			<td align = "justify" valign = "top" ><a class = "aciklama">BMW iX M60'ın yüksek performanslı iki BMW M eDrive motora sahip üst düzey performanslı hareketli aksamı hızlı güç dağıtımını garanti ediyor. Dört çeker sistemin arkadan itiş ağırlıklı ayarı ve duygulara hitap eden ses deneyimi modelin sportif karakterini vurguluyor. Uzun bir menzil sunan yüksek gerilimli büyük batar</a></td>
-			<td align = "justify" valign = "top" ><a class = "aciklama">Otomatik seviye kontrolü özellikli adaptif 2 akslı havalı süspansiyon ve diğer özelliklerinin yanı sıra M'e özel tasarıma sahip dengeleyiciler üstün sürüş dinamiklerinin yanında son derece konforlu bir sürüş sunuyor. Aynı zamanda aracın yüksekliğini her türlü yük altında aynı seviyede tutuyor ve sürüş moduna göre otoma</a></td>
-			<td align = "justify" valign = "top" ><a class = "aciklama">İntegral Aktif Direksiyon, ön aks üzerinde direksiyon açısına bağlı olarak değişen desteği yine direksiyona etki eden arka tekerleklerle birleştiriyor. 60 km/saatin altındaki hızlarda, arka tekerlekler ters yönlerde dönerek daha fazla manevra kabiliyeti ve çeviklik sağlıyor. 60 - 80 km/sa hızdan itibaren, arka tekerlek</a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama"> Ön konsol ve kapılar arasında hareket eden BMW Interaction Bar aydınlatma açısından özel bir yeniliktir. Dokunmatik yüzeyler klimayı ve ek fonksiyonları kontrol etmenizi sağlıyor. </a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama"> Kokpit Bowers & Wilkins Surround Ses Sistemiyle bir konser salonu haline geliyor. Özel yapım bir ses sistemi ile 17 hoparlör ve 655 watt güç sunuyor. .</a></td>
 			
 		</tr>
 		
 	</table>
+	
 	<br><br>
 	
+	
 	<!-- slider -->
+
 	
 	<br><br>
 	
@@ -153,23 +153,23 @@
 		
 		<tr>
 			
-			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX_M60/İXM60jant.jpg" width = "100%" ></td>
-			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX_M60/İXM60stop.jpg" width = "100%" ></td>
-			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İX_M60/İXM60koltuk.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İ5/2.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İ5/3.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/elektirikli_modeller/İ5/4.jpg" width = "100%" ></td>
 			
 		</tr>
 		<tr>
 			
-			<td align = "center" ><a class = "aciklamaBaslik">   22 inç, stil 1023, Bicolor Titanyum Bronz M aerodinamik jantlar.  </a></td>
-			<td align = "center" ><a class = "aciklamaBaslik">   M vurgusu.    </a></td>
-			<td align = "center" ><a class = "aciklamaBaslik">   Suite Amido iç tasarım.  </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik">  Karanlıkta bile kolayca tanınıyor.   </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik">   Otomobile binerken benzersiz bir karşılama.     </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik">   Neredeyse açık havada oturuyorsunuz gibi.   </a></td>
 			
 		</tr>
 		<tr>
 			
-			<td align = "justify" valign = "top" ><a class = "aciklama">22 inç, stil 1023, Bicolor Titanyum Bronz, 3D parlatılmış M hafif alaşım jantlar, 9,5J x 22 jant boyutu ve 275/40 R22 lastiklerle.</a></td>
-			<td align = "justify" valign = "top" ><a class = "aciklama">Bagaj kapağının sağ kısmında yer alan titanyum bronz çerçeveli M60 model yazısı, aracın sürüş dinamikleri bakımından yüksek potansiyeline işaret ediyor.</a></td>
-			<td align = "justify" valign = "top" ><a class = "aciklama">Ön konsol, kapı kaplama panelleri, merkez konsol ve koltuklarda kullanılan zeytin yaprağıyla tabaklanmış özel doğal deri döşemesi sürdürülebilir lüksün modern havasını yansıtıyor.Şık kapitone dikişler döşemeye lüks ve konforlu bir görünüm kazandırıyor. Başlıklardaki Altın Bronz renkli vurgulara sahip parçalar mükemmel bir uyum sağlıyor. </a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">  BMW Iconic Glow Böbrek Izgaraları özellikle karanlıkta göze çarpıyor. Otomobil hareketsizken veya hareket halindeyken konturlarındaki beyaz ışıklarla kendini gösteriyor. </a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">  Dinamik Karşılama Aydınlatması otomobile binerken ve inerken kapı alanını güvenlik amacıyla aydınlatıyor ve aynı zamanda ışık animasyonlarıyla sizi karşılayarak ilham veriyor. </a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama"> Panoramik cam tavan otomobilin içini daha geniş gösteriyor. Daha fazla ışığı içeriye alarak her koltukta üstü açık otomobil atmosferinden keyif almanızı sağlıyor. </a></td>
 			
 		</tr>
 		
