motorlar sayfası denendi ve plan onaylandı

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li><a href="elektirikli_modeller/elektrikliModeller.html">Elektrikli Modeller</a>
           <ul>
             <li><a href="#">İ Series</a></li>
-            <li><a href="#">İX Series</a></li>
+            <li><a href="#İX">İX Series</a></li>
           </ul>
         </li>
         <li><a href="motorlar/motorlar.html">Motorlar</a>
