boyut bugu düzenleme

--- a/modeller/XSeries/X1Series.html
+++ b/modeller/XSeries/X1Series.html
@@ -17,9 +17,10 @@
 <div id="anaDiv">
   <div id="Header">
   
-    <div id="logo"><a href = "../../index.html"><img src = "../../resimler/logolar/bmwLogo.png" width="180" /></a></div>
+    <div id="logo"><a href = "../../index.html"><img src = "../../resimler/logolar/bmwLogo.png" width="100%" /></a>
+    </div>
     
-    <div id="banner"><img src="../../resimler/banner/banner.jpg" width="1520" /></div>
+    <div id="banner"><img src="../../resimler/banner/banner.jpg" width="100%" /></div>
   </div>
   <div id="icerik1Dİv">
     <div id="menuDiv">
