--- a/motorlar/motorlar.html
+++ b/motorlar/motorlar.html
@@ -16,9 +16,10 @@
 <div id="anaDiv">
   <div id="Header">
   
-    <div id="logo"><a href = "../index.html"><img src = "../resimler/logolar/bmwLogo.png" width="180" /></a></div>
+    <div id="logo"><a href = "../index.html"><img src = "../resimler/logolar/bmwLogo.png" width="100%" /></a>
+    </div>
     
-    <div id="banner"><img src="../resimler/banner/banner.jpg" width="1520" /></div>
+    <div id="banner"><img src="../resimler/banner/banner.jpg" width="100%" /></div>
   </div>
   <div id="icerik1Dİv">
     <div id="menuDiv">
@@ -46,7 +47,7 @@
         </li>
         <li><a href="motorlar.html">Motorlar</a>
         	<ul>
-            	<li><a href="#">Adventure</a></li>
+            	<li><a href="#">Advanture</a></li>
             	<li><a href="#">Heritage</a></li>
 			 	<li><a href="#">Sport</a></li>
             	<li><a href="#">M</a></li>
