--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 <div id="anaDiv">
   <div id="Header">
   
-    <div id="logo"><a href = "index.html"><img src = "resimler/logolar/bmwLogo.png" width="180" /></a></div>
+    <div id="logo"><a href = "index.html"><img src = "resimler/logolar/bmwLogo.png" width="100%" /></a>
+    </div>
     
-    <div id="banner"><img src="resimler/banner/banner.jpg" width="1520" /></div>
+    <div id="banner"><img src="resimler/banner/banner.jpg" width="100%" /></div>
   </div>
   <div id="icerik1Dİv">
     <div id="menuDiv">
@@ -40,7 +41,7 @@
         <li><a href="elektirikli_modeller/elektrikliModeller.html">Elektrikli Modeller</a>
           <ul>
             <li><a href="#">İ Series</a></li>
-            <li><a href="#İX">İX Series</a></li>
+            <li><a href="#">İX Series</a></li>
           </ul>
         </li>
         <li><a href="motorlar/motorlar.html">Motorlar</a>
